--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 attrs==19.1.0
-botocore==1.12.222
+awscli==1.16.233
+boto3==1.9.223
+botocore==1.12.223
 chalice==1.11.0
 click==6.7
+colorama==0.3.9
 docutils==0.15.2
 enum-compat==0.0.2
 jmespath==0.9.4
+pyasn1==0.4.7
 python-dateutil==2.8.0
+PyYAML==5.1.2
+rsa==3.4.2
+s3transfer==0.2.1
 six==1.12.0
 urllib3==1.25.3
